修改为单个实例的更新
